- Updated spooky theme.